Fully implement Byte mode for Version 1 to 6